# V8-Qt-Desktop-Assistant

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/ai/: CMakeLists.txt  ai.cpp  ai.h  ailib.cpp  ailib.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/ocr/: CMakeLists.txt  ocr.cpp  ocr.h  screenscanlib.cpp  screenscanlib.h
src/overlay/: CMakeLists.txt  overlay.cpp  overlay.h
src/speech/: CMakeLists.txt  miclib.cpp  miclib.h  speech.cpp  speech.h
src/ui/: CMakeLists.txt
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h
src/ui/styles/: CMakeLists.txt  animationlib.cpp  animationlib.h
tests/: CMakeLists.txt
tests/benchmark/: BenchmarkCoreComponents.cpp  CMakeLists.txt
tests/integration/: CMakeLists.txt  TestIntegration.cpp  TestModuleIntegration.cpp
tests/unit/: CMakeLists.txt  TestCoreComponents.cpp  TestErrorHandler.cpp  TestNewModules.cpp
